--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="经验世界漫步" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="经验世界漫步" type="application/atom+xml" />
+   <meta name="author" content="Fallen Leaves in the Empirical World" />
+   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Fallen Leaves in the Empirical World" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
    <!-- syntax highlighting CSS -->
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">经验世界漫步</a>
+    <a href="/">Fallen Leaves in the Empirical World</a>
     <a class="extra" href="/">home</a>
   </div>
   
@@ -36,7 +36,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        经验世界漫步<br />
+        Fallen Leaves in the Empirical World<br />
         <br />
       </p>
     </div>
