--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Fallen Leaves in the Empirical World" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Fallen Leaves in the Empirical World" type="application/atom+xml" />
+   <meta name="author" content="Tom Preston-Werner" />
+   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
    <!-- syntax highlighting CSS -->
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Fallen Leaves in the Empirical World</a>
+    <a href="/">Tom Preston-Werner</a>
     <a class="extra" href="/">home</a>
   </div>
   
@@ -36,14 +36,16 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Fallen Leaves in the Empirical World<br />
-        <br />
+        Tom Preston-Werner<br />
+        Cofounder of <a href="http://github.com/">GitHub</a><br />
+        tom@mojombo.com
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/firesletter/">github.com/firesletter</a><br />
-        <a href="http://www.douban.com/people/66183982">douban.com/people/66183982</a><br />
+        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
+        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
+        <a href="http://flickr.com/photos/mojombo/">flickr.com/photos/mojombo</a>
       </p>
     </div>
     <div class="rss">
@@ -54,6 +56,7 @@ var WRInitTime=(new Date()).getTime();
   </div>
 </div>
 
+<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
 
 <!-- ClickTale Bottom part -->
 <div id="ClickTaleDiv" style="display: none;"></div>
