--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Fallen Leaves in the Empirical World" />
+   <meta name="author" content="经验世界的落叶" />
    <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Fallen Leaves in the Empirical World</a>
+    <a href="/">经验世界的落叶</a>
     <a class="extra" href="/">home</a>
   </div>
   
@@ -36,7 +36,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Fallen Leaves in the Empirical World<br />
+        经验世界的落叶<br />
         Cofounder of <a href="http://github.com/">GitHub</a><br />
         tom@mojombo.com
       </p>
