--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,15 +37,13 @@ var WRInitTime=(new Date()).getTime();
     <div class="contact">
       <p>
         经验世界的落叶<br />
-        Cofounder of <a href="http://github.com/">GitHub</a><br />
-        tom@mojombo.com
+        <br />
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
-        <a href="http://flickr.com/photos/mojombo/">flickr.com/photos/mojombo</a>
+        <a href="http://github.com/firesletter/">github.com/firesletter</a><br />
+        <a href="http://www.douban.com/people/66183982/">douban.com/people/66183982</a><br />
       </p>
     </div>
     <div class="rss">
