--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,14 +36,13 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        经验世界的落叶<br />
-        <br />
+        Fallen Leaves in the Empirical World<br />
+        Template forked from mojombo.github.io<br />
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/firesletter/">github.com/firesletter</a><br />
-        <a href="http://www.douban.com/people/66183982/">douban.com/people/66183982</a><br />
+        <a href="http://www.douban.com/people/66183982/">我的豆瓣</a><br />
       </p>
     </div>
     <div class="rss">
