--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Fallen Leaves in the Empirical World<br />
+        A collection of fallen leaves in the empirical world.<br />
         Template forked from mojombo.github.io<br />
       </p>
     </div>
