--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@ var WRInitTime=(new Date()).getTime();
     <div class="contact">
       <p>
         A collection of fallen leaves in the empirical world.<br />
-        Template forked from mojombo.github.io<br />
+        Template cloned from mojombo.github.io<br />
       </p>
     </div>
     <div class="contact">
