--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@ var WRInitTime=(new Date()).getTime();
   {{ content }}
   
   <div class="footer">
-    <div class="contact">
+    <div class="intro">
       <p>
         A collection of fallen leaves in the empirical world.<br />
         Template cloned from mojombo.github.io<br />
@@ -44,11 +44,6 @@ var WRInitTime=(new Date()).getTime();
       <p>
         <a href="http://www.douban.com/people/66183982/">我的豆瓣</a><br />
       </p>
-    </div>
-    <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
     </div>
   </div>
 </div>
