--- a/css/screen.css
+++ b/css/screen.css
@@ -111,7 +111,12 @@ ul.posts {
   .site .title a.extra:hover {
     color: black;
   }
-
+  
+  .site .subtitle a{
+    font-size: 130%;
+    color: black;
+    text-decoration: none;
+  }
   .site .meta {
     color: #aaa;
   }
