--- a/_layouts/rural.html
+++ b/_layouts/rural.html
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="subtitle">
-    <a href="/">目标、方法和关注</a>
+    <a href="/">Category: 乡土之上的生活与心灵</a>
     <a class="extra" href="/">home</a>
   </div>
   
