--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="异己世界的落叶" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="异己世界的落叶" type="application/atom+xml" />
+   <meta name="author" content="他人世界的落叶" />
+   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="他人世界的落叶" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
    <!-- syntax highlighting CSS -->
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">异己世界的落叶</a>
+    <a href="/">他人世界的落叶</a>
     <a class="extra" href="/">home</a>
   </div>
   
