--- a/_layouts/rural.html
+++ b/_layouts/rural.html
@@ -36,7 +36,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="intro">
       <p>
-        A collection of fallen leaves in the empirical world.<br />
+        A collection of fallen leaves in the world of others.<br />
         Template cloned from mojombo.github.io<br />
       </p>
     </div>
