--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,11 @@ var WRInitTime=(new Date()).getTime();
         <a href="http://www.douban.com/people/66183982/">我的豆瓣</a><br />
       </p>
     </div>
+    <div class="rss">
+      <a href="http://feeds.feedburner.com/Anderen">
+        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
+      </a>
+    </div>
   </div>
 </div>
 
