--- a/css/screen.css
+++ b/css/screen.css
@@ -139,9 +139,10 @@ ul.posts {
       }
     .site .footer .contact {
       margin: 0 auto;
+      margin-right: 3em;
     }
     .site .footer .rss {
-      margin-top: 0;
+      margin-top: 1.1em;
       margin-right: -.2em;
       float: right;
     }
