--- a/css/screen.css
+++ b/css/screen.css
@@ -140,6 +140,7 @@ ul.posts {
     .site .footer .contact {
       margin: 0 auto;
       margin-right: 3em;
+      margin-left: 3em;
     }
     .site .footer .rss {
       margin-top: 1.1em;
