--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@ var WRInitTime=(new Date()).getTime();
   {{ content }}
   
   <div class="footer">
-    <div class="intro">
+    <div class="contact">
       <p>
         A collection of fallen leaves in the world of others.<br />
         Template cloned from mojombo.github.io<br />
@@ -42,7 +42,7 @@ var WRInitTime=(new Date()).getTime();
     </div>
     <div class="contact">
       <p>
-        <a href="http://www.douban.com/people/66183982/">我的豆瓣</a><br />
+        <a href="http://www.douban.com/people/66183982/">去我的豆瓣主页</a><br />
       </p>
     </div>
     <div class="rss">
