--- a/css/screen.css
+++ b/css/screen.css
@@ -140,6 +140,7 @@ ul.posts {
 
     }
     .site .footer .rss {
+      margin-left: 7em;
       margin-top: 1.1em;
       margin-right: -.2em;
       float: right;
